# BUT_PCG_portals

./: CMakeLists.txt  README.md  todo.md
libs/SDL-release-3.2.26/src/hidapi/testgui/: testgui.sln  testgui.vcxproj
libs/assimp-6.0.2/samples/SimpleOpenGL/: SimpleOpenGL.sln  SimpleOpenGL.vcxproj
libs/cppgraphics/: cppgraphics.cpp
models/: door.glb  floor.glb  wall.glb  wall_long.glb
src/: draw.cpp  gl_scene.cpp  gl_scene.hpp  main.cpp  map_gen.cpp  map_gen.hpp  maze.frag  maze.vert  model.cpp  point.cpp  pointer.frag  pointer.vert  portal_visibility.cpp  portal_visibility.hpp  room_shape.cpp
